# Cpp-Daily-Task-Manager

./: CMakeLists.txt  README.md  main.cpp
Header Files/: Algorithm.h  Controller.h  NoCopy.h  Observer.h  Storage.h  StorageEncrypted.h  Subject.h  Task.h  TaskManager.h  Time.h  Vector.h  View.h  Xml.h
Source Files/: Controller.cpp  View.cpp  Xml.cpp
lib/easy-encryption/: Base64.cpp  Base64.h  encryption.h  vigenere.h
